Dibuat menggunakan Colaboratory

--- a/Mgg2/Polynomial_Regression_EconomicOfScale_week2.ipynb
+++ b/Mgg2/Polynomial_Regression_EconomicOfScale_week2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMzz1iUzv+xLD6AREjijEdJ",
+      "authorship_tag": "ABX9TyNfB2gvJYCCKqMRr6KEChrN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,6 +53,10 @@
     {
       "cell_type": "code",
       "source": [
+        "#Nama : Tassya Ramadhanti\n",
+        "#NIM  : 1103204016\n",
+        "#Polynomial Regression EconomicOfScale\n",
+        "\n",
         "import pandas as pd\n",
         "\n",
         "# Ganti path sesuai dengan lokasi dataset CSV di Google Drive Anda\n",
@@ -69,9 +73,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "abJgX_PDGjCo",
-        "outputId": "62fb6ca5-302d-4041-d27f-f5c529b81742"
+        "outputId": "1672ada4-d9ff-4a5b-8606-125c7979f035"
       },
-      "execution_count": 22,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,6 +94,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Menampilkan 17 baris pertama dari DataFrame\n",
         "df.head(17)"
       ],
       "metadata": {
@@ -98,9 +103,9 @@
           "height": 582
         },
         "id": "fWzEq6UvGu6m",
-        "outputId": "3710e1bf-0863-459a-ea01-5192de3e9bde"
+        "outputId": "3a4ae2d8-2fbd-496a-979b-a6e1e1701233"
       },
-      "execution_count": 23,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -127,7 +132,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-951dfb6f-cea7-4f31-814a-e1926437c9e7\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-47ad7a31-ab9e-4bda-b6a0-4aaa280758ef\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -242,7 +247,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-951dfb6f-cea7-4f31-814a-e1926437c9e7')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-47ad7a31-ab9e-4bda-b6a0-4aaa280758ef')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -294,12 +299,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-951dfb6f-cea7-4f31-814a-e1926437c9e7 button.colab-df-convert');\n",
+              "        document.querySelector('#df-47ad7a31-ab9e-4bda-b6a0-4aaa280758ef button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-951dfb6f-cea7-4f31-814a-e1926437c9e7');\n",
+              "        const element = document.querySelector('#df-47ad7a31-ab9e-4bda-b6a0-4aaa280758ef');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -319,8 +324,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-4c3f803a-8439-4a6e-ac23-645419e42f82\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4c3f803a-8439-4a6e-ac23-645419e42f82')\"\n",
+              "<div id=\"df-0b768961-332b-4a48-83d0-1870a6da63b5\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0b768961-332b-4a48-83d0-1870a6da63b5')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -439,7 +444,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-4c3f803a-8439-4a6e-ac23-645419e42f82 button');\n",
+              "        document.querySelector('#df-0b768961-332b-4a48-83d0-1870a6da63b5 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -450,13 +455,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 36
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "#variabel yang menyimpan DataFrame\n",
         "df"
       ],
       "metadata": {
@@ -465,9 +471,9 @@
           "height": 423
         },
         "id": "ynrT8ayUGyst",
-        "outputId": "1475ad1b-5a29-45e4-adff-76ddae652bab"
+        "outputId": "cdd5d091-6543-48db-ef3e-99328a137e77"
       },
-      "execution_count": 24,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -490,7 +496,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4fa9c40b-d18a-4534-80e3-f6a76dfa5e36\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-2cea1699-f429-40bc-8c16-916bd8800ef1\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -576,7 +582,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4fa9c40b-d18a-4534-80e3-f6a76dfa5e36')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2cea1699-f429-40bc-8c16-916bd8800ef1')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -628,12 +634,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-4fa9c40b-d18a-4534-80e3-f6a76dfa5e36 button.colab-df-convert');\n",
+              "        document.querySelector('#df-2cea1699-f429-40bc-8c16-916bd8800ef1 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-4fa9c40b-d18a-4534-80e3-f6a76dfa5e36');\n",
+              "        const element = document.querySelector('#df-2cea1699-f429-40bc-8c16-916bd8800ef1');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -653,8 +659,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-163af0a1-ffa9-4a60-ab4a-a011be96eef7\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-163af0a1-ffa9-4a60-ab4a-a011be96eef7')\"\n",
+              "<div id=\"df-272fa280-a173-4d7f-a14c-3206b9516b54\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-272fa280-a173-4d7f-a14c-3206b9516b54')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -773,7 +779,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-163af0a1-ffa9-4a60-ab4a-a011be96eef7 button');\n",
+              "        document.querySelector('#df-272fa280-a173-4d7f-a14c-3206b9516b54 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -784,13 +790,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 37
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "#metode untuk mendapatkan informasi dari DataFrame\n",
         "df.info()"
       ],
       "metadata": {
@@ -798,9 +805,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1gDDdARVG10y",
-        "outputId": "30c24759-1f11-4faf-9f36-45ed43e6fa36"
+        "outputId": "01221d8b-b67a-418e-eccf-8c1afa7ec39c"
       },
-      "execution_count": 25,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -822,6 +829,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Ringkasan statistik DataFrame\n",
         "df.describe()"
       ],
       "metadata": {
@@ -830,9 +838,9 @@
           "height": 300
         },
         "id": "s9P3mkYZG4sL",
-        "outputId": "59e599a2-812c-45a1-bb2b-07817c5a4ebb"
+        "outputId": "c23f6b4b-dd30-43d8-b326-1b41ae867734"
       },
-      "execution_count": 26,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -850,7 +858,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-16873c33-cc56-4743-89fe-598a659b9ef4\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-796fa487-d6ba-40d8-889d-d52e582aabd4\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -920,7 +928,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-16873c33-cc56-4743-89fe-598a659b9ef4')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-796fa487-d6ba-40d8-889d-d52e582aabd4')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -972,12 +980,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-16873c33-cc56-4743-89fe-598a659b9ef4 button.colab-df-convert');\n",
+              "        document.querySelector('#df-796fa487-d6ba-40d8-889d-d52e582aabd4 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-16873c33-cc56-4743-89fe-598a659b9ef4');\n",
+              "        const element = document.querySelector('#df-796fa487-d6ba-40d8-889d-d52e582aabd4');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -997,8 +1005,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-e65d4194-d4af-48ee-bc9a-341f8cd1c414\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e65d4194-d4af-48ee-bc9a-341f8cd1c414')\"\n",
+              "<div id=\"df-d2d05c7a-17bf-44bb-8ef5-5d6d0ff9ce08\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d2d05c7a-17bf-44bb-8ef5-5d6d0ff9ce08')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1117,7 +1125,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-e65d4194-d4af-48ee-bc9a-341f8cd1c414 button');\n",
+              "        document.querySelector('#df-d2d05c7a-17bf-44bb-8ef5-5d6d0ff9ce08 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1128,7 +1136,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 40
         }
       ]
     },
