Dibuat menggunakan Colaboratory

--- a/UTS/UTS_ML_XGBoost_Students_Performance_in_Exams.ipynb
+++ b/UTS/UTS_ML_XGBoost_Students_Performance_in_Exams.ipynb
@@ -439,7 +439,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Langkah-langkah diatas saya pelajari dari materi [Data Sains](https://drive.google.com/drive/folders/1uCSXhElJS7DheQ26rTev05mD5igK_eEf) pertemuan 5"
+        "Langkah-langkah diatas saya pelajari dari materi [Data Sains](https://drive.google.com/file/d/1ZCk65Jcc58KaQQk0VxoBTi6thBOJOoV_/view?usp=sharing) pertemuan 5"
       ],
       "metadata": {
         "id": "4rrhYjLslREw"
@@ -1640,11 +1640,7 @@
       "source": [
         "# Data Visualization\n",
         "----\n",
-        "Penggunaan grafik untuk memvisualisasikan distribusi dan hubungan antar variabel.\n",
-        "\n",
-        "\n",
-        "Dari materi [Data Sains](https://drive.google.com/drive/folders/1uCSXhElJS7DheQ26rTev05mD5igK_eEf)\n",
-        "pertemuan 5"
+        "Penggunaan grafik untuk memvisualisasikan distribusi dan hubungan antar variabel."
       ],
       "metadata": {
         "id": "0HRv66_inpyH"
