Dibuat menggunakan Colaboratory

--- a/Mgg8/Tassya_Salary_Data_SVR.ipynb
+++ b/Mgg8/Tassya_Salary_Data_SVR.ipynb
@@ -484,6 +484,29 @@
     {
       "cell_type": "markdown",
       "source": [
+        "fungsi dari setiap library:\n",
+        "\n",
+        "1. **pandas (pd):** Pandas adalah library untuk manipulasi dan analisis data.\n",
+        "\n",
+        "2. **numpy (np):** NumPy adalah library untuk komputasi numerik di Python.\n",
+        "\n",
+        "3. **sklearn.svm (SVR):** Bagian dari scikit-learn (sklearn), modul ini menyediakan algoritma Support Vector Machines (SVM) untuk tugas-tugas regresi.\n",
+        "\n",
+        "4. **matplotlib.pyplot (plt):** Matplotlib adalah library untuk visualisasi data di Python. `pyplot` adalah salah satu modul di Matplotlib yang memberikan antarmuka untuk membuat visualisasi grafik seperti plot garis, scatter plot, histogram, dan sebagainya.\n",
+        "\n",
+        "5. **sklearn.model_selection (GridSearchCV, train_test_split):** `GridSearchCV` adalah alat untuk melakukan pencarian parameter terbaik untuk model Anda melalui grid search. `train_test_split` adalah fungsi yang membagi dataset menjadi data latih dan data uji.\n",
+        "\n",
+        "6. **sklearn.metrics (mean_squared_error):** Modul ini menyediakan berbagai metrik evaluasi kinerja model, dan `mean_squared_error` adalah salah satu metrik yang mengukur seberapa baik model regresi memprediksi nilai dengan membandingkan nilai sebenarnya dan nilai yang diprediksi.\n",
+        "\n",
+        "7. **sklearn.preprocessing (StandardScaler):** Modul ini menyediakan berbagai fungsi untuk pra-pemrosesan data. `StandardScaler` digunakan untuk melakukan standarisasi pada fitur-fitur, yaitu mengubah distribusi fitur sehingga memiliki nilai rata-rata 0 dan deviasi standar 1. Standarisasi ini dapat membantu model yang sensitif terhadap skala bekerja dengan lebih baik."
+      ],
+      "metadata": {
+        "id": "QuMp_KOT_4UJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Prompt ChatGPT:\n",
         "beri kode untuk membaca dataset menjadi dataframe"
       ],
