--- a/Mgg8/Tassya_Haberman_Dataset_SVM.ipynb
+++ b/Mgg8/Tassya_Haberman_Dataset_SVM.ipynb
@@ -32,7 +32,7 @@
       "source": [
         "# **Nama : Tassya Ramadhanti**\n",
         "# **NIM  : 1103204016**\n",
-        "# **Studying Support Vector Machine (SVM) for classification using the \"Haberman Dataset.**"
+        "# **Studying Support Vector Machine (SVM) for classification using [Haberman Dataset](https://www.kaggle.com/datasets/dzikrifaizziyan/haberman-dataset/data).**"
       ],
       "metadata": {
         "id": "3Zaz0d_HjA82"
@@ -1014,7 +1014,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Dalam kode di atas, fitur X atau 'Age, Operation_Year, Axillary_Nodes' di-standarisasi menggunakan StandardScaler sebelum diterapkan pada model SVC. Standarisasi ini membantu model untuk lebih efektif belajar dari data dan meningkatkan interpretasi hasilnya."
+        "Dalam kode di atas, fitur X atau 'Age, Operation_Year' di-standarisasi menggunakan StandardScaler sebelum diterapkan pada model SVC. Standarisasi ini membantu model untuk lebih efektif belajar dari data dan meningkatkan interpretasi hasilnya."
       ],
       "metadata": {
         "id": "vxPaXEz7-N4b"
