Dibuat menggunakan Colaboratory

--- a/Mgg13/CNN_Modern_Tassya.ipynb
+++ b/Mgg13/CNN_Modern_Tassya.ipynb
@@ -1059,7 +1059,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "![VGGNet](https://www.researchgate.net/profile/Zhuofa-Chen/publication/351476658/figure/fig1/AS:1022122327556098@1620704361699/GGNet-architecture-A-face-expression-image-is-fed-into-the-model-The-four-convolutional.png)"
+        "![VGGNet](https://miro.medium.com/max/1400/1*hs8Ud3X2LBzf5XMAFTmGGw.jpeg)"
       ],
       "metadata": {
         "id": "tRD4Pmt_foD_"
